# ows-core

./: .gitignore  README.md  vercel.json  wallets.md
.github/workflows/: release.yml
bindings/node/: Cargo.toml  README.md  package-lock.json  package.json
bindings/node-adapters/src/: viem.js
bindings/node/__test__/: index.spec.mjs
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/tests/: test_bindings.py
docs/: 01-storage-format.md  02-chain-agnostic-addressing.md  03-signing-interface.md  04-policy-engine.md  06-agent-access-layer.md  07-supported-chains.md  08-wallet-lifecycle.md  sdk-cli.md  sdk-node.md  sdk-python.md
lws/: README.md  install.sh
lws/.github/workflows/: release.yml
lws/crates/lws-cli/src/: main.rs
ows/: README.md
ows/crates/ows-cli/src/: main.rs
ows/crates/ows-core/src/: chain.rs  config.rs
ows/crates/ows-lib/: Cargo.toml
ows/crates/ows-lib/src/: key_ops.rs  (+3 more)
ows/crates/ows-pay/: Cargo.toml
ows/crates/ows-pay/src/: chains.rs  discovery.rs  error.rs  fund.rs  lib.rs  mpp.rs  types.rs  wallet.rs  x402.rs
ows/crates/ows-signer/: Cargo.toml
readme/partials/: cli-reference.md
website/: index.html
website/css/: style.css
website/docs/: 01-storage-format.html  02-chain-agnostic-addressing.html  04-policy-engine.html  06-agent-access-layer.html  08-wallet-lifecycle.html  doc.html  index.html
website/js/: docs.js
(+11 files in other folders)
